prevent auto fullscreen on iphone

--- a/src/scss/_video.scss
+++ b/src/scss/_video.scss
@@ -305,3 +305,11 @@ video::-webkit-media-controls-current-time-display
     align-self: center;
   }
 }
+
+// hide native play buttons will still trigger the fullscreen
+.IIV::-webkit-media-controls-play-button,
+.IIV::-webkit-media-controls-start-playback-button {
+     opacity: 0;
+     pointer-events: none;
+     width: 5px;
+ }
